10 changed files added

--- a/ball.html
+++ b/ball.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/ball.css">
 </head>
 <body>
+
     <div class="suport">
         <div class="smash">
             <div class="shadow">
@@ -15,5 +16,13 @@
             </div>
         </div>
     </div>
+
+    <nav class="link">
+        <a href="./car.html">evening car</a>
+        <a href="./car2.html">morning car</a>
+        <a href="./index.html">rain</a>
+        <a href="./moon.html">moon eclipse</a>
+    </nav>
+
 </body>
 </html>
