--- a/car.html
+++ b/car.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="./css/car.css">
 </head>
 <body>
+
     <div class="night">
         <div class="surface"></div>
         <div class="car">
             <img src="./img/Img_06.png" alt="">
         </div>
     </div>
-    
+
+    <nav class="link">
+        <a href="./index.html">rain</a>
+        <a href="./car2.html">morning car</a>
+        <a href="./ball.html">jumping ball</a>
+        <a href="./moon.html">moon eclipse</a>
+    </nav>
+
 </body>
 </html>
