--- a/car2.html
+++ b/car2.html
@@ -19,6 +19,13 @@
             </div>
         </div>
     </div>
+
+    <nav class="link">
+        <a href="./car.html">evening car</a>
+        <a href="./index.html">rain</a>
+        <a href="./ball.html">jumping ball</a>
+        <a href="./moon.html">moon eclipse</a>
+    </nav>
     
 </body>
 </html>
