--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <!-- <div class="svetafor">
-        <div class="color red"></div>
-        <div class="color yellow"></div>
-        <div class="color green"></div>
-    </div> -->
 
     <div class="rain"></div>
+
+    <nav class="link">
+        <a href="./car.html">evening car</a>
+        <a href="./car2.html">morning car</a>
+        <a href="./ball.html">jumping ball</a>
+        <a href="./moon.html">moon eclipse</a>
+    </nav>
+
 </body>
 </html>
